force-app/main/default/objects/HTTPCalloutConfiguration__c/HTTPCalloutConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>HTTPCalloutConfiguration</label>
</CustomObject>