force-app/main/default/objects/HTTPCalloutConfiguration__c/fields/HeaderParameters__c.field-meta.xml
<CustomField>
    <fullName>HeaderParameters__c</fullName>
    <label>HeaderParameters</label>
    <type>TextArea</type>
</CustomField>