force-app/main/default/objects/HTTPCalloutConfiguration__c/fields/IsCompressed__c.field-meta.xml
<CustomField>
    <fullName>IsCompressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCompressed</label>
    <type>Checkbox</type>
</CustomField>