force-app/main/default/objects/HTTPCalloutConfiguration__c/fields/URLParameters__c.field-meta.xml
<CustomField>
    <fullName>URLParameters__c</fullName>
    <label>URLParameters</label>
    <type>TextArea</type>
</CustomField>